--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "fedapay/fedapay-php": "^0.1.8",
+        "kkiapay/kkiapay-php": "dev-master",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
